tweask fork8s deploymeny

--- a/deployment.yml
+++ b/deployment.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: cotbot
 spec:
-  replicas: 1
+  replicas: 10
   selector:
     matchLabels:
       app: cotbot
@@ -16,8 +16,13 @@ spec:
     spec:
       containers:
       - name: cotbot
-        image: cotbot:1.0.1
+        image: cotbot:latest
+        args: ["udpWithDetails"]
         imagePullPolicy: IfNotPresent
         env:
         - name: remoteHost
           value: "192.168.29.145"
+        - name: MY_BOT_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
